--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ requires-python = ">=3.11"
 dependencies = [
     "beaverfe>=0.2.1",
     "numpy>=2.3.1",
+    "optuna>=4.4.0",
     "pandas>=2.3.1",
+    "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.1",
+    "wandb>=0.21.0",
     "xgboost>=3.0.2",
 ]
 
