--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "beaverfe>=0.2.1",
+    "evidently>=0.7.11",
+    "fastapi>=0.116.1",
     "numpy>=2.3.1",
     "optuna>=4.4.0",
     "pandas>=2.3.1",
