--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,26 @@
 repos:
-  # Format with Ruff
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.7
+  # Sync pyproject.toml with uv.lock
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.8.3
     hooks:
-      - id: ruff
+      - id: uv-lock
+  
+  # Lint and format with Ruff
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.12.5
+    hooks:
+      - id: ruff-check
         args: [ --fix ]
       - id: ruff-format
 
-  # Automatically sorts and formats Python imports
+  # Organize imports
   - repo: https://github.com/pycqa/isort
     rev: 6.0.0
     hooks:
       - id: isort
         args: ["--profile", "black"]
 
-  # Detect hardcoded secrets
+  # Detect secrets
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.24.0
     hooks:
